--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,3 +7,10 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 
+
+
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Mouse_GameMode.Mouse_GameMode_C
+EditorStartupMap=/Game/Maps/lvl2.lvl2
+GameDefaultMap=/Game/Maps/lvl2.lvl2
+
