--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=988AF0982F4A6707831723B9127120CE
+
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+ForDistribution=False
+FullRebuild=True
+
