WIP Pawn version with click

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/Mouse_GameMode.Mouse_GameMode_C
-EditorStartupMap=/Game/Maps/lvl3.lvl3
-GameDefaultMap=/Game/Maps/lvl3.lvl3
+GlobalDefaultGameMode=/Game/Blueprint/MouseGameMode.MouseGameMode_C
+EditorStartupMap=/Game/Maps/lvl4.lvl4
+GameDefaultMap=/Game/Maps/lvl4.lvl4
 
